2002-01-04  Pablo Saratxaga <pablo@mandrakesoft.com>

	* configure,in (ALL_LINGUAS): Added "eu".

2001-12-17  Havoc Pennington  <hp@pobox.com>

        Backport from HEAD
	
	* backends/xml-dir.c (dir_get_value): always get schema name, not
	just if value is unset

	* gconf/gconf-sources.c (gconf_sources_query_value): don't look
	for a default value for the schema. Useless and adds a bit of
	inefficiency.

	* gconf/gconf-sources.c (gconf_sources_query_value): Fix this so
	Gergo's bug doesn't happen; hope no other semantic gets broken.
	
2001-12-17  Havoc Pennington  <hp@pobox.com>

        Backport from HEAD
	
	* gconf/gconf-listeners.c: reference count the listeners, make a
	copy of listener lists and ref all listeners prior to doing the
	notifies, to minimize reentrancy screwups.

2001-12-04  Havoc Pennington  <hp@redhat.com>

        Backport from HEAD
	
	* gconf/gconf-internals.c (open_empty_locked_file): improve error

	* gconf/gconftool.c (main): complain about using --config-source
	but not --direct

	* backends/xml-backend.c (resolve_address): don't try to lock 
	readonly sources; fixes the case where users install to a prefix 
	that they can write to, was causing problems for people using
	build scripts.

	* gconf/gconfd.c (gconf_set_exception): add missing value to case
	statement so we don't crash

	* gconf/gconftool.c (process_schema_list): make sure we have an
	element instead of a text node before we try to process it; kills
	a bunch of irritating warnings.

2001-10-31  Zbigniew Chyla  <cyba@gnome.pl>

	* gconf/gconf-internals.c (gconf_activate_server): Plug leak.

2001-10-30  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* backends/val-encode.c: add missing headers to remove
	some warnings.

2001-10-29  Havoc Pennington  <hp@redhat.com>

	* configure.in: bump version to 1.0.7

2001-10-29  Havoc Pennington  <hp@redhat.com>

        Un-fubar this.
	
	* gconf/gconf-internals.c (g_utf8_skip, g_utf8_validate):